🎉 Update landing page to v2.2.0 with latest stats

--- a/index.html
+++ b/index.html
@@ -306,20 +306,20 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-box">
-                    <div class="stat-value">22,000+</div>
+                    <div class="stat-value">27,000+</div>
                     <div class="stat-label">Lines of Code</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">32+</div>
+                    <div class="stat-value">36+</div>
                     <div class="stat-label">Screens</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">100%</div>
-                    <div class="stat-value">Feature Complete</div>
+                    <div class="stat-value">50+</div>
+                    <div class="stat-label">Features</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">0</div>
-                    <div class="stat-label">Compilation Errors</div>
+                    <div class="stat-value">100%</div>
+                    <div class="stat-label">Live Now!</div>
                 </div>
             </div>
         </div>
