🎁 Update landing page: Early Access Offer
- Changed 'Free Forever' to 'Early Access Offer'
- Updated CTAs: 'Join Early Access' and 'Claim Your Spot'
- Added prominent callout explaining lifetime access for feedback
- Removed all 'free' language per user request
- Emphasized community-driven development

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="nav-auth">
                 <a href="#signup" id="navLoginLink" class="nav-link-btn">Login</a>
-                <a href="#signup" class="btn btn-primary" id="navSignupLink">Sign Up Free</a>
+                <a href="#signup" class="btn btn-primary" id="navSignupLink">Join Early Access</a>
             </div>
         </div>
     </nav>
@@ -46,7 +46,7 @@
                     through task management, gamification, and class enrollment.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#signup" class="btn btn-primary btn-large">Get Started Free</a>
+                    <a href="#signup" class="btn btn-primary btn-large">Claim Your Spot</a>
                     <a href="#demo" class="btn btn-secondary btn-large">Watch Demo</a>
                 </div>
                 <p style="margin-top: 2rem; opacity: 0.9; font-size: 0.95rem;">
@@ -66,8 +66,8 @@
                         <div class="stat-label">Achievements</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">100%</div>
-                        <div class="stat-label">Free Forever</div>
+                        <div class="stat-number">🎁</div>
+                        <div class="stat-label">Early Access Offer</div>
                     </div>
                 </div>
             </div>
@@ -242,22 +242,33 @@
                 <div class="beta-info">
                     <h2>Get Started with Early Access</h2>
                     <p>Sign up now and start using Sparktracks immediately. No waiting, no approval needed!</p>
+                    
+                    <div class="early-access-callout" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; color: white; box-shadow: 0 8px 16px rgba(102, 126, 234, 0.3);">
+                        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 0.75rem;">
+                            <span style="font-size: 2rem;">🎁</span>
+                            <h3 style="margin: 0; font-size: 1.3rem; font-weight: 700;">Early Access Offer</h3>
+                        </div>
+                        <p style="margin: 0; font-size: 1rem; line-height: 1.6; opacity: 0.95;">
+                            Be part of our journey from the start! Early users receive <strong>lifetime access at no charge</strong> in exchange for your valuable feedback. Help us build something amazing together and shape the future of Sparktracks for everyone.
+                        </p>
+                    </div>
+                    
                     <div class="beta-benefits">
                         <div class="benefit">
                             <span class="benefit-icon">🎉</span>
                             <span>Instant access - Start using immediately</span>
                         </div>
                         <div class="benefit">
-                            <span class="benefit-icon">🚀</span>
-                            <span>100% free forever - All features included</span>
+                            <span class="benefit-icon">🎁</span>
+                            <span><strong>Early Access Offer:</strong> Lifetime access at no charge</span>
+                        </div>
+                        <div class="benefit">
+                            <span class="benefit-icon">🤝</span>
+                            <span>Join our journey - Your feedback shapes the future</span>
                         </div>
                         <div class="benefit">
                             <span class="benefit-icon">💡</span>
                             <span>Direct support from our team</span>
-                        </div>
-                        <div class="benefit">
-                            <span class="benefit-icon">🎁</span>
-                            <span>Early adopter perks and rewards</span>
                         </div>
                     </div>
                 </div>
