--- a/index.html
+++ b/index.html
@@ -321,16 +321,16 @@
                     <div class="stat-label">Lines of Code</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">36+</div>
+                    <div class="stat-value">40+</div>
                     <div class="stat-label">Screens</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">50+</div>
+                    <div class="stat-value">60+</div>
                     <div class="stat-label">Features</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-value">100%</div>
-                    <div class="stat-label">Live Now!</div>
+                    <div class="stat-value">v2.4.0</div>
+                    <div class="stat-label">Latest Version</div>
                 </div>
             </div>
         </div>
